@@ -1,2 +1,24 @@
 Makefile
 Makefile.in
+stamp-vti
+mdate-sh
+cflow.info*
+version.texi
+stamp-1
+cflow.log
+cflow.dvi
+cflow.aux
+cflow.cp
+cflow.fn
+cflow.vr
+cflow.tp
+cflow.ky
+cflow.pg
+cflow.op
+cflow.toc
+cflow.ps
+cflow.tmp
+cflow.cps
+cflow.fns
+cflow.pgs
+
